test/programs/good/typechecker/new_3.lq
initQubit :: !(() -> Qbit)
initQubit _ = new @0

main :: Qbit * Qbit
main = (initQubit (), initQubit ())
