test/programs/bad/typechecker/new_4.lq
initQubit :: !(() -> Qbit)
initQubit _ = new @0

main :: Qbit * Bit
main = (initQubit (), initQubit ())
